--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "fezfez/ErrorReporter",
+    "name": "fezfez/error-reporter",
     "type": "library",
     "description": "Logging for PHP 5.3 and ZF1",
     "keywords": ["log","logging", "ZF1"],
