--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "keywords": ["log","logging", "ZF1"],
     "homepage": "https://github.com/fezfez/ErrorReporter",
     "license": "MIT",
+    "version": "0.1beta"
     "authors": [
         {
             "name": "Demonchaux Stéphane",
