Meilleur explication de l'utilisation + ajout de la version

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["log","logging", "ZF1"],
     "homepage": "https://github.com/fezfez/ErrorReporter",
     "license": "MIT",
-    "version": "0.1beta"
+    "version": "0.1beta",
     "authors": [
         {
             "name": "Demonchaux Stéphane",
